--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
 		"dev": "bun --watch index.ts"
 	},
 	"dependencies": {
-		"chokidar": "^4.0.3",
+		"@types/jsdom": "^27.0.0",
+		"chokidar": "^5.0.0",
 		"defuddle": "^0.6.6",
-		"jsdom": "^25.0.1",
-		"puppeteer": "^23.11.1"
+		"jsdom": "^27.4.0",
+		"puppeteer": "^24.36.0"
 	},
 	"devDependencies": {
-		"@types/bun": "latest",
-		"@types/node": "^22.10.5"
+		"@types/bun": "^1.3.6",
+		"@types/node": "^25.0.10"
 	}
 }
