feat: more flags

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,27 @@
-# Vault configuration
-VAULT=vault
+# Configuration (required)
 CLIPPING_DIR=Clippings
-LINKS_FILE=vault/bookmarks.md
+LINKS_FILE=bookmarks.md
+
+# Parser mode (optional, default: puppeteer)
+# Use "puppeteer" for browser-based rendering or "jsdom" for lightweight parsing
+# PARSER=puppeteer
+
+# Return format (optional, default: json)
+# Use "md" for markdown or "json" for JSON response
+# RETURN_FORMAT=json
+
+# Save to disk (optional, default: true)
+# Set to "false" to only return content without saving
+# SAVE_TO_DISK=true
+
+# Daemon mode (optional, default: false)
+# Set to 1 to run in daemon mode via environment variable
+# DAEMON=1
+
+# Puppeteer cache directory (optional)
+# Override the default cache location for Chrome/Chromium
+# PUPPETEER_CACHE_DIR=/custom/cache/path
+
+# Debug logging (optional, default: false)
+# Set to 1 to enable debug output
+# DEBUG=1
