--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
 	"scripts": {
 		"start": "bun run index.ts",
 		"dev": "bun --watch index.ts",
-		"postinstall": "bun x puppeteer browsers install chrome-headless-shell"
+		"pup": "bun x puppeteer browsers install chrome-headless-shell"
 	},
 	"dependencies": {
 		"@types/jsdom": "^27.0.0",
 		"chokidar": "^5.0.0",
 		"defuddle": "^0.6.6",
 		"jsdom": "^27.4.0",
-		"puppeteer": "^24.36.0"
+		"puppeteer": "^24.36.1"
 	},
 	"devDependencies": {
-		"@types/bun": "^1.3.6",
-		"@types/node": "^25.0.10"
+		"@types/bun": "^1.3.8",
+		"@types/node": "^25.2.0"
 	}
 }
